target/classes/META-INF/fabric8/openshift/fis-springboot-camel-amq-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=fis-springboot-camel-amq&var-version=1.0
  labels:
    app: fis-springboot-camel-amq
    provider: fabric8
    version: "1.0"
    group: com.redhat.gpe.training
  name: fis-springboot-camel-amq
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: fis-springboot-camel-amq
    provider: fabric8
    group: com.redhat.gpe.training
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=fis-springboot-camel-amq&var-version=1.0
      labels:
        app: fis-springboot-camel-amq
        provider: fabric8
        version: "1.0"
        group: com.redhat.gpe.training
    spec:
      containers:
      - env:
        - name: AMQP_HOST
          value: broker-amq-amqp
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"undertow":{"io-threads":1, "worker-threads":2 }}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: fis-springboot-camel-amq:1.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: fis-springboot-camel-amq:1.0
    type: ImageChange
